practice with objects

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -34,6 +34,13 @@
           <ul id="contacts">
 
           </ul>
+        </div>
+        <div class="col-md-6">
+            <div id="show-contact">
+                <h2></h2>
+                <p>First name: <span class="first-name"></span></p>
+                <p>Last name: <span class="last-name"></span></p>
+            </div>
         </div>
       </div>
     </div>
